--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mi web</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1>Hola mundo, este es una actualizacion</h1>
     <script src="index.js"></script>
 
 </body>
